force-app/main/default/objects/Trust_Portfolio__c/Trust_Portfolio__c.object-meta.xml
<CustomObject>
    <label>Trust Portfolio</label>
    <nameField>
        <label>Trust Portfolio Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trust Portfolios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>