force-app/main/default/objects/Trust_Portfolio__c/fields/Pooled_Trust__c.field-meta.xml
<CustomField>
    <fullName>Pooled_Trust__c</fullName>
    <label>Pooled Trust</label>
    <referenceTo>Pooled_Trust__c</referenceTo>
    <relationshipLabel>Trust Portfolios</relationshipLabel>
    <relationshipName>Trust_Portfolios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>