force-app/main/default/objects/Trust_Portfolio__c/fields/True_Link_Portfolio_ID__c.field-meta.xml
<CustomField>
    <fullName>True_Link_Portfolio_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>TrueLink Portfolio ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>