force-app/main/default/objects/Trust_Portfolio__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>True_Link_Portfolio_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>